--- a/pages/happiness.html
+++ b/pages/happiness.html
@@ -70,10 +70,9 @@ authen's website. very cool!
         <marquee style="margin: 30px">
           <a href="/pages/freemoney.html">click here for free money</a>
         </marquee>        <!-- 
-      the part of the marquee of a bunch of buttons of other sites and alt text 
+      the part of the marquee (not a marquee anymore lmao) of a bunch of buttons of other sites and alt text 
       you can skip this part of the code its kinda messy
       -->
-        <marquee>
           <img
             src="/images/brolove.gif"
             alt="its okay to give your bros some love"
@@ -110,13 +109,6 @@ authen's website. very cool!
             ><img
               src="/images/caperflower.png"
               alt="a button that redirects you to the caperflower website"
-              width="88"
-              height="31"
-          /></a>
-          <a href="https://authks.xyz" target="_blank"
-            ><img
-              src="/images/authks.png"
-              alt="a button that redirects you to authks's site"
               width="88"
               height="31"
           /></a>
@@ -160,16 +152,53 @@ authen's website. very cool!
           <a href="https://fsky.io" target="_blank">
           <img width="88" height="31" style="image-rendering:pixelated" src="https://fsky.io/assets/img/badge.png">
           </a>
-        </marquee>
+          <a href="https://autumn.town" target="_blank">
+          <img width="88" height="31" src="/images/New Project(2).gif" style="image-rendering:pixelated" >
+          </a>
+          <a href="https://fourstar.nekoweb.org" target="_blank"><img width="88px" height="31px" src="https://fourstar.nekoweb.org/88x31.gif" alt="FourStar" title="FourStar"></a>
+          <a href="https://youtu.be/03CmiLP_Bx0?si=w8IqeWEV615GdeHF" target="_blank">
+          <img width="88" height="31" src="/images/ty.gif">
+          </a>
+          <a href="https://larsfrommars.neocities.org/" target="_blank">
+          <img width="88" height="31" src="https://larsfrommars.neocities.org/buttons/lars.png">
+          </a>
+          <a href="https://synth.download"><img src="https://synth.download/assets/buttons/sneexy.svg" alt="Sneexy" title="Sneexy"></a>
+          <a href="https://jack.cab" target="_blank">
+          <img width="88" height="31" src="/images/Untitled.png">
+          </a>
+          <a href="https://velzie.rip" target="_blank">
+          <img width="88" height="31" src="https://velzie.rip/88x31.png">
+          </a>
+          <a href="https://blueb.pages.gay" target="_blank">
+          <img width="88" height="31" src="https://blueb.pages.gay/_nuxt/kattgutte.D3vLs2tl.png">
+          </a>
+          <a href="https://besties.house" target="_blank">
+          <img width="88" height="31" src="/images/besties.gif">
+          </a>
+          <a href="https://vea.st" target="_blank">
+          <img width="88" height="31" src="https://vea.st/button.png">
+          </a>
+          <a href="https://rinici.de">
+  <img src="https://rinici.de/button.png">
+</a>
+          <a href="https://zayd.fsky.io">
+  <img src="https://zayd.fsky.io/assets/images/badges/mine/zayd-v1.png">
+</a>
+<a href="https://redcatho.de"><picture>
+    <source srcset="https://redcatho.de/buttons/red.webp" type="image/webp">
+    <img src="https://redcatho.de/buttons/red.png" width="88" height="31" alt="the text 'red is purple' on a purple background">
+</picture></a>
+<a href="https://twelvemen.neocities.org/index.html"><img src="https://twelvemen.neocities.org/12men.gif"></a>
+<a href="https://detondev.com"><img src="/images/detondev.gif"></a>
         <!-- button thing -->
-        <p style="margin: 40px">use my button</p>
+        <p style="margin: 40px">use my button (hotlink!)</p>
         <p style="margin-left: 5px">
           <a href="https://authenyo.xyz"
             ><img src="/images/button.gif"
             alt="authen"
           /></a>
         </p>
-        <img src="/images/money.webp" alt="god bless the usa" width="200" height="200" /></p>
+        <img src="/images/money.webp" alt="god bless the usa" width="200" height="200" />
         <p>
           <a href="https://www.last.fm/user/pixeIbath"
             ><img
