--- a/navbar.html
+++ b/navbar.html
@@ -8,7 +8,7 @@
   <p><a href="/blog/index.html">blog</a></p>
   <p><a href="/pages/gallery.html">gallery</a></p>
   <p><a href="/pages/coolmusic.html">cool music</a></p>
-  <p><a href="https://git.gay/authenyo/website" target="_blank">git repo</a></p>
+  <p><a href="https://github.com/authenyoo/website" target="_blank">git repo</a></p>
   <p><a href="/pages/givememoney.html">donate</a></p>
   <p><a href="https://authen.atabook.org" target="_blank">guestbook</a></p>
   <p><a href="/pages/services.html">services</a></p>
