--- a/navbar2.html
+++ b/navbar2.html
@@ -9,7 +9,7 @@
         <p><a href="/pages/gallery.html">gallery</a></p>
         <p><a href="/pages/coolmusic.html">cool music</a></p>
         <p>
-          <a href="https://git.gay/authenyo/website" target="_blank"
+          <a href="https://github.com/authenyoo/website" target="_blank"
             >git repo</a
           >
         </p>
